# lolzteam-api-python

./: README.md  pyproject.toml  test_real.py
codegen/: generate.py
lolzteam/: __init__.py  base.py
lolzteam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lolzteam/_core/: __init__.py  client.py  mixin.py
lolzteam/forum/: __init__.py  _generated.py
lolzteam/market/: __init__.py  _generated.py
tests/: test_sdk.py
