[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lolzteam"
version = "1.0.0"
description = "Python SDK for the LOLZ Forum and ZT.MARKET APIs"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "lolzteam-sdk contributors" }]
keywords = ["lolzteam", "lolz", "zt.market", "api", "wrapper", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "httpx[socks]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "black",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/your-org/lolzteam-python"
Documentation = "https://github.com/your-org/lolzteam-python#readme"
"Bug Tracker" = "https://github.com/your-org/lolzteam-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lolzteam*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
